conf = {
    'basic_conf': {
        'server': '172.18.53.17:31051',
        'audio_file_path': '/Users/xiashuai01/TranFile/baidu/personal-code/'
                           'shulingjie-grpc-java-client/audio-streaming-client/bj8k.wav'
    },
    'init_request_conf': {
        'enable_chunk': True,
        'enable_long_speech': True,
        'enable_flush_data': True,
        'product_id': '1903',
        'sample_point_bytes': 2,
        'send_per_seconds': 0.16,
        'sleep_ratio': 1,
        'app_name': 'python',
        'log_level': 4
    }
}
